# Kafka-Log-Anamoly-Detector-

./: .env.example  .gitignore  EDA.ipynb  README.md  docker-compose.yml  first_model.py  pyproject.toml  requirements.txt  split_dataset.py
docker/: Dockerfile
services/: aggregate_consumer.py  inference.py  inference_randomforest.py  labelled_producer.py  raw_producer.py  retrainer.py  retrainer_randomforest.py
utils/: __init__.py  autoencoder.py  event_extractor.py  kafka_codecs.py  settings.py  train.py  train_ae.py
