[project]
name = "kafka-log-anomaly-detector"
version = "0.1.0"
description = "Streaming HDFS log anomaly detection with Kafka, Random Forest, and autoencoder models."
requires-python = ">=3.10"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
